# octonion

./: .gitignore  Cargo.toml  README.md
benches/: multiplication.rs
examples/: display_demo.rs
src/: e8.rs  expr.rs  lib.rs  macros.rs  octonion.rs  paren.rs  quaternion.rs  simd.rs
tests/: common.rs  e8.rs  integration.rs  octonion_core.rs  paren.rs  simd.rs
