[package]
name = "octonion"
version = "0.1.0"
edition = "2024"
authors = ["Xander"]
description = "Minimal, dependency-free, no_std octonion algebra"
documentation = "https://docs.rs/octonion"
readme = "README.md"
repository = "https://github.com/xander/octonion"
license = "MIT OR Apache-2.0"
keywords = ["octonion", "algebra", "math", "quaternion", "no_std"]
categories = ["mathematics", "no-std", "science"]

[features]
default = ["alloc"]
alloc = []
e8 = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "multiplication"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
